--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
+        "doctrine/data-fixtures": "^1.3",
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "liip/functional-test-bundle": "^1.8",
+        "phpunit/phpunit": "^6.3",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
